--- a/BertvizTutorial.ipynb
+++ b/BertvizTutorial.ipynb
@@ -29,7 +29,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install bertviz"
+        "!pip install bertviz\n",
+        "!pip install sacremoses"
       ],
       "metadata": {
         "id": "aR07__FyOf8a"
@@ -149,6 +150,15 @@
       ],
       "metadata": {
         "id": "-QnRteSLP0Hm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0ClqsMvZA2TQ"
       },
       "execution_count": null,
       "outputs": []
