--- a/Transformers_wandb.ipynb
+++ b/Transformers_wandb.ipynb
@@ -17,6 +17,17 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Libraries\n",
+        "\n",
+        "We install our transformer library."
+      ],
+      "metadata": {
+        "id": "LI2_m6fbDR7h"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install simpletransformers"
@@ -26,6 +37,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Weights and Biases\n",
+        "\n",
+        "We log into W&B - preferable using GitHub account:"
+      ],
+      "metadata": {
+        "id": "bM7_7GOsDkh8"
+      }
     },
     {
       "cell_type": "code",
@@ -40,6 +62,15 @@
         "import pandas as pd\n",
         "wandb.login()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We download data and we cut it - we use only 15k records, because training takes too long with whole dataset"
+      ],
+      "metadata": {
+        "id": "-wnHDZBTDty4"
+      }
     },
     {
       "cell_type": "code",
@@ -76,6 +107,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We concatenate columns 1 and 2 and then name it \"labels\" and \"text\" it is required by SimpleTransformer library:"
+      ],
+      "metadata": {
+        "id": "yODiKy_gEEoS"
+      }
     },
     {
       "cell_type": "code",
@@ -121,6 +161,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Training model\n",
+        "\n",
+        "Here we define model and parameter for training and run it."
+      ],
+      "metadata": {
+        "id": "Dk8jSD0WEdGc"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from simpletransformers.classification import ClassificationModel\n",
@@ -156,7 +207,7 @@
       "source": [
         "### Zadania\n",
         "\n",
-        "1. Sprawdzić jaki jest czas, kiedy nie korzystamy z CUDY\n",
+        "1. Sprawdzić jaki jest czas, kiedy nie korzystamy z CUDY (GPU)\n",
         "2. Sprobować rożnych parametrow i poprawić wyniki\n",
         "3. Sprawdzić inne modele do multi-class classification ze strony: https://simpletransformers.ai/docs/classification-specifics/"
       ],
@@ -166,9 +217,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "a5JVw9kMPa8v"
       },
